# wordle_solver

./: Cargo.toml
.github/workflows/: rust.yml
res/: british-english
src/: arg.rs  error.rs  lib.rs  main.rs  parse.rs  solver.rs
