[package]
name = "wordle_solver"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.92", features = ["backtrace"] }
clap = { version = "4.5.20", features = ["derive", "suggestions"] }
itertools = "0.13.0"
regex = "1.11.1"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.66"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
